spacing and navigation fixes

--- a/src/sass/blocks/_all.scss
+++ b/src/sass/blocks/_all.scss
@@ -34,18 +34,30 @@ body {
 .space {
   &--padding {
     &--top {
-      padding-top: 160px;
+      @media only screen and (min-width: 768px) {
+        padding-top: 160px;
+      }
+      padding-top: 110px;
     }
     &--bottom {
-      padding-bottom: 160px;
+      @media only screen and (min-width: 768px) {
+        padding-bottom: 160px;
+      }
+      padding-bottom: 110px;
     }
   }
   &--margin {
     &--top {
-      margin-top: 160px;
+      @media only screen and (min-width: 768px) {
+        margin-top: 160px;
+      }
+      margin-top: 110px;
     }
     &--bottom {
-      margin-bottom: 160px;
+      @media only screen and (min-width: 768px) {
+        margin-bottom: 160px;
+      }
+      margin-bottom: 110px;
     }
   }
 }
