--- a/src/sass/blocks/_stats.scss
+++ b/src/sass/blocks/_stats.scss
@@ -10,7 +10,11 @@
 
 #stat-container {
   // compensate for anchor link
-  margin-bottom: 130px;
+  @media only screen and (min-width: 768px) {
+    margin-bottom: 130px;
+  }
+  margin-bottom: 80px;
+
   background: radial-gradient(ellipse at 50% 105%, #262c33 0%, #111619 80%);
   padding-top: 60px;
   padding-bottom: 60px;
